force-app/main/default/objects/RegrasSLACategorizacao__c/RegrasSLACategorizacao__c.object-meta.xml
<CustomObject>
    <description>Regras de SLA por categorização para motor N3 customizado.</description>
    <label>Regra SLA Categorização</label>
    <nameField>
        <displayFormat>RSC-{000000}</displayFormat>
        <label>Nome da Regra</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Regras SLA Categorização</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>