force-app/main/default/objects/RegrasSLACategorizacao__c/fields/AreaAtendimento__c.field-meta.xml
<CustomField>
    <fullName>AreaAtendimento__c</fullName>
    <label>Área Atendimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AreasParticipantesAtendimento</valueSetName>
    </valueSet>
</CustomField>