force-app/main/default/objects/RegrasSLACategorizacao__c/fields/BusinessHoursName__c.field-meta.xml
<CustomField>
    <fullName>BusinessHoursName__c</fullName>
    <label>Business Hours Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>