force-app/main/default/objects/RegrasSLACategorizacao__c/fields/Categorizacao__c.field-meta.xml
<CustomField>
    <fullName>Categorizacao__c</fullName>
    <label>Categorização</label>
    <referenceTo>Categorizacao__c</referenceTo>
    <relationshipLabel>Regras SLA</relationshipLabel>
    <relationshipName>RegrasSLA</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>