force-app/main/default/objects/RegrasSLACategorizacao__c/fields/ChaveUnica__c.field-meta.xml
<CustomField>
    <fullName>ChaveUnica__c</fullName>
    <label>Chave Única</label>
    <length>255</length>
    <type>Text</type>
</CustomField>