force-app/main/default/objects/RegrasSLACategorizacao__c/fields/ChaveUnicaHash__c.field-meta.xml
<CustomField>
    <fullName>ChaveUnicaHash__c</fullName>
    <label>Chave Única Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>