force-app/main/default/objects/RegrasSLACategorizacao__c/fields/EscopoRegra__c.field-meta.xml
<CustomField>
    <fullName>EscopoRegra__c</fullName>
    <description>Define se a regra é global, por categorização ou por área interna.</description>
    <label>Escopo da Regra</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Por Categorizacao</fullName>
            </value>
            <value>
                <fullName>Por Area Interna</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>