force-app/main/default/objects/RegrasSLACategorizacao__c/fields/GestaoSLA__c.field-meta.xml
<CustomField>
    <fullName>GestaoSLA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relaciona a regra de SLA ao contexto de Gestão de SLA responsável pelos marcos e tempos configurados.</description>
    <inlineHelpText>Gestão de SLA à qual esta regra pertence.</inlineHelpText>
    <label>Gestão de SLA</label>
    <referenceTo>GestaoSLA__c</referenceTo>
    <relationshipLabel>Regras de SLA</relationshipLabel>
    <relationshipName>RegrasSLA</relationshipName>
    <type>Lookup</type>
</CustomField>