force-app/main/default/objects/RegrasSLACategorizacao__c/fields/IdExterno__c.field-meta.xml
<CustomField>
    <fullName>IdExterno__c</fullName>
    <description>Identificador único do registro em sistema externo ou em carga de dados entre orgs, usado como chave de upsert.</description>
    <externalId>true</externalId>
    <inlineHelpText>Chave única vinda de carga/integração entre orgs. Não preencher manualmente sem necessidade de integração.</inlineHelpText>
    <label>Id Externo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>