force-app/main/default/objects/RegrasSLACategorizacao__c/fields/MarcoSLA__c.field-meta.xml
<CustomField>
    <fullName>MarcoSLA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relaciona a regra ao marco de SLA configurado para a Gestão de SLA.</description>
    <inlineHelpText>Marco de SLA ao qual esta regra se aplica.</inlineHelpText>
    <label>Marco SLA</label>
    <referenceTo>MarcoSLA__c</referenceTo>
    <relationshipLabel>Regras de SLA</relationshipLabel>
    <relationshipName>RegrasSLA</relationshipName>
    <type>Lookup</type>
</CustomField>