force-app/main/default/objects/RegrasSLACategorizacao__c/fields/Origem__c.field-meta.xml
<CustomField>
    <fullName>Origem__c</fullName>
    <label>Origem</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Qualquer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>