force-app/main/default/objects/RegrasSLACategorizacao__c/fields/TempoAlta__c.field-meta.xml
<CustomField>
    <fullName>TempoAlta__c</fullName>
    <description>Tempo de SLA em minutos para prioridade Alta.</description>
    <label>Tempo Alta em Minutos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>