force-app/main/default/objects/RegrasSLACategorizacao__c/fields/TempoBaixa__c.field-meta.xml
<CustomField>
    <fullName>TempoBaixa__c</fullName>
    <description>Tempo de SLA em minutos para prioridade Baixa.</description>
    <label>Tempo Baixa em Minutos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>