force-app/main/default/objects/RegrasSLACategorizacao__c/fields/TempoMedia__c.field-meta.xml
<CustomField>
    <fullName>TempoMedia__c</fullName>
    <description>Tempo de SLA em minutos para prioridade Média.</description>
    <label>Tempo Média em Minutos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>