force-app/main/default/objects/RegrasSLACategorizacao__c/fields/UsaBusinessHoursSecundario__c.field-meta.xml
<CustomField>
    <fullName>UsaBusinessHoursSecundario__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Quando marcado, esta Regra de SLA de Área Interna herda o Business Hours Secundário da Gestão de SLA (RegiaoAtendimentoSecundaria__c/BusinessHoursSecundarioName__c), em vez do Business Hours padrão.</description>
    <inlineHelpText>Marque para que esta regra use o Business Hours da região de atendimento secundária da Gestão de SLA.</inlineHelpText>
    <label>Usa Business Hours Secundário</label>
    <type>Checkbox</type>
</CustomField>