force-app/main/default/objects/RegrasSLACategorizacao__c/fields/VigenciaFim__c.field-meta.xml
<CustomField>
    <fullName>VigenciaFim__c</fullName>
    <description>Data final de vigência da regra de SLA.</description>
    <label>Fim da Vigência</label>
    <type>Date</type>
</CustomField>