force-app/main/default/objects/RegrasSLACategorizacao__c/fields/VigenciaInicio__c.field-meta.xml
<CustomField>
    <fullName>VigenciaInicio__c</fullName>
    <description>Data inicial de vigência da regra de SLA.</description>
    <label>Início da Vigência</label>
    <type>Date</type>
</CustomField>